# sqlitediff

./: .travis.yml  CMakeLists.txt  diff.c  diff.h  main-diff.cpp  main-patch.cpp  patch.cpp  patch.h
test/: CMakeLists.txt  test.cpp
